# persona-steering-template-library

./: .gitignore  LICENSE  README.md  README.qmd  justfile  pyproject.toml
.github/workflows/: quarto-pages.yml
data/: examples.jsonl  literature.jsonl  persona_pairs_v2_candidates.jsonl  persona_pairs_w2s_character.jsonl  scenarios_w2s_character_3p.jsonl  template_catalog.yaml  template_pair_stats.csv  template_pair_stats.jsonl  template_sources.jsonl  template_stats.csv  template_stats.jsonl  templates_v2_candidates.txt  v2_pilot_seed23_examples.jsonl  v2_pilot_seed23_template_pair_stats.csv  v2_pilot_seed23_template_pair_stats.jsonl  v2_pilot_seed23_template_stats.csv  v2_pilot_seed23_template_stats.jsonl
data/personas/: persona_pairs_engineered_baseline_pilot_two.jsonl  persona_pairs_pilot_two.jsonl  persona_pairs_refusal_probe_two.jsonl  persona_pairs_v2_candidates.jsonl
docs/: choosing_personas.md  guide.md  index.html  index.qmd  persona-steering-skill.md  persona_prompt_literature_review.md  persona_prompt_prior_art.md  quarto-wide.css  v2_expansion.md
scenario_sources/: HANDOVER.md  README.md  export_scenarios.py  loaders.py  score_machiavelli_moral_contrast.py  summarise_machiavelli.py
scripts/: build_hf_dataset.py  docs_results.py  export_authority_steering_selection.py  export_persona_template_stats.py  plot_on_off_axis.py  prepare_authority_steering_selection.py  readme_plot.py  summarize_model_matrix.py  sync_template_library.py  template_catalog.py  update_readme_model_matrix.py  update_readme_results_table.py  validate_persona_axes_openrouter.py
(+48 files in other folders)
