[project]
name = "persona-steering-template-library"
version = "0.1.0"
description = "Measured persona prompt templates and contrastive persona pairs for steering experiments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "adjusttext>=1.3.0",
  "huggingface-hub>=1.18.0",
  "loguru",
  "matplotlib>=3.10.0",
  "openai",
  "pyarrow>=24.0.0",
  "pyyaml",
  "python-dotenv",
  "tabulate",
  "tqdm",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
